name:           devtools
version:        0.1
synopsis:       Haskell interface to Chrome DevTools Protocol (protocol)
description:    https://github.com/ChromeDevTools/devtools-protocol
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     me@shane.sh
stability:      Experimental
category:       Web
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/devtools
bug-reports:    https://github.com/duairc/devtools/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  exposed-modules:
    DevTools.Client
    DevTools.Event
    DevTools.Method
    DevTools.Pipe
    DevTools.Server

  other-modules:
    DevTools.Reply

  build-depends:
    aeson,
    async,
    base,
    bytestring,
    deepseq,
    layers,
    hashable,
    resource,
    stm,
    text,
    transformers,
    unix

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/devtools.git
